# hkgbox-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.html
config/: log4rs.yaml
data/: icon.manifest.json
playgrounds/: examples.rs
scripts/: topics.js  view.js
src/: builder.rs  lib.rs  list.rs  main.rs  model.rs  parser.rs  reply_model.rs  responser.rs  screen_manager.rs  state_manager.rs  status.rs  web.rs
src/builders/: index.rs  mod.rs  show.rs
src/caches/: common.rs  file_cache.rs  mod.rs
src/control/: index.rs  mod.rs  show.rs
src/net/: mod.rs  web_resource.rs
src/resources/: common.rs  default_resource.rs  image_resource.rs  index_resource.rs  mod.rs  show_resource.rs  web_resource.rs
src/screen/: common.rs  index.rs  list.rs  mod.rs  post.rs  show.rs  status_bar.rs
src/utility/: cache.rs  client.rs  mod.rs  string.rs
study/: demo.html
